test: Voucher API Controller 테스트 리팩토링